WIP Add MainMenuActivity

--- a/mobile/app/src/main/res/layout/activity_registration.xml
+++ b/mobile/app/src/main/res/layout/activity_registration.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="108dp"
         android:layout_marginTop="54dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Парола"
         android:inputType="textPassword"
         android:singleLine="false"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginLeft="106dp"
         android:layout_marginTop="89dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Потребителско име"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +41,7 @@
         android:layout_marginLeft="108dp"
         android:layout_marginTop="45dp"
         android:ems="10"
-        android:hint="Repeat password"
+        android:hint="Повторете парола"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordRegistrationEditText" />
@@ -53,7 +53,7 @@
         android:layout_marginStart="152dp"
         android:layout_marginLeft="152dp"
         android:layout_marginTop="44dp"
-        android:text="Register"
+        android:text="Регистрация"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/repeatPasswordRegistrationEditText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
