--- a/mobile/app/src/main/res/layout/add_edit_category_dialog.xml
+++ b/mobile/app/src/main/res/layout/add_edit_category_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -22,7 +23,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Добави" />
+            android:text="OK"
+            app:backgroundTint="#74B334"
+            app:strokeColor="#FFFFFF" />
 
         <Button
             android:id="@+id/cancelButton"
@@ -30,5 +33,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Затвори" />
+
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#D61A1A"
+            android:text="Изтрий"
+            android:visibility="gone"
+            app:backgroundTint="#CD3939" />
     </LinearLayout>
 </LinearLayout>
