Add new buttons to fragments and dialogs

--- a/mobile/app/src/main/res/layout/add_edit_category_dialog.xml
+++ b/mobile/app/src/main/res/layout/add_edit_category_dialog.xml
@@ -44,4 +44,11 @@
             android:visibility="gone"
             app:backgroundTint="#CD3939" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/checkForChangesCategoriesButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Провери за промени"
+        android:visibility="gone" />
 </LinearLayout>
