--- a/mobile/app/src/main/res/layout/fragment_memories.xml
+++ b/mobile/app/src/main/res/layout/fragment_memories.xml
@@ -11,6 +11,7 @@
         android:id="@+id/memoriesListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
+
     </ListView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -21,8 +22,22 @@
         android:layout_marginBottom="50dp"
         android:clickable="true"
         android:src="@android:drawable/btn_plus"
-        app:backgroundTint="#4EE367"
-        tools:visibility="visible"
+        app:backgroundTint="#55DA6C"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:rippleColor="#4E3535"
+        tools:visibility="visible" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/syncMemoriesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="50dp"
+        android:clickable="true"
+        android:src="@drawable/ic_menu_manage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
