--- a/mobile/app/src/main/res/layout/add_edit_memory_dialog.xml
+++ b/mobile/app/src/main/res/layout/add_edit_memory_dialog.xml
@@ -70,7 +70,7 @@
         android:id="@+id/noChangesMemoryTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Няма промени"
+        android:text="Няма промени или не съществува такъв запис"
         android:textColor="#ED4545"
         android:textSize="24sp"
         android:visibility="gone" />
