--- a/mobile/app/src/main/res/layout/add_edit_category_dialog.xml
+++ b/mobile/app/src/main/res/layout/add_edit_category_dialog.xml
@@ -56,7 +56,7 @@
         android:id="@+id/noChangesCategoryTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Няма промени или не съществува такъв запис"
+        android:text="Няма промени или не съществува такъв запис в бд на сървиса"
         android:textColor="#ED4545"
         android:textSize="24sp"
         android:visibility="gone" />
@@ -79,6 +79,6 @@
         android:id="@+id/duplicateCategoryButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Дублирай и обнови"
+        android:text="Обнови и дублирай"
         android:visibility="gone" />
 </LinearLayout>
